kubernetes/mongosts.yaml


apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: mongo
  replicas: 3
  template:
    metadata:
      labels:
        app: mongo
        selector: mongo
    spec:
      volumes:
        - name: mongo-config
          configMap:
            name: mongo-config
            items:
              - key: mongodb.conf
                path: mongodb.conf
      containers:
      - name: mongo
        image: mongo:4.4.6
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: pvc
          mountPath: /data/db
        - name: mongo-config
          mountPath: /etc/mongo  
        command:
        
            # - /bin/bash
            # - -c
            # - mv /usr/bin/numactl /usr/bin/numactl1 && source docker-entrypoint.sh mongod
            - mongod
            - "--bind_ip_all"
            - --config=/etc/mongo/mongodb.conf   
                
  volumeClaimTemplates:
  - metadata:
      name: pvc
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
