kubernetes/userapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: userapi
  template:
    metadata:
      labels:
        app: userapi
    spec:
      containers:
      
      - name: userapi
        image: users
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3005
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"  
---
apiVersion: v1
kind: Service
metadata:
  name: userapi
spec:
  type: ClusterIP
  selector:
    app: userapi
  ports:
  - port: 3005
    targetPort: 3005
