kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: userapi
            port:
              number: 3005
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: productapi
            port:
              number: 8080
